sorted locations for logo and bar

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
-<img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+<head>
+    <link href="style.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>Google</title>
+</head>
+    <body>
+          <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+          <input id="search" type="text" name="search" maxlength="2048">
+    </body>
