navbar foundation built

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <title>Google</title>
 </head>
     <body>
-          <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+          <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
           <input id="search" type="text" name="search" maxlength="2048">
+          <ul id="navbar">
+              <li><p>About</p></li>
+              <li><p>Store</p></li>
+              <li><p>Gmail</p></li>
+              <li><p>Images</p></li>
+              <li><img id="google-apps" src="https://icon-library.com/images/google-apps-icon-png/google-apps-icon-png-28.jpg"></li>
+              <li><button id="sign-in">Sign In</button></li>
+          </ul>
     </body>
