--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <body>
           <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
           <input id="search" type="text" name="search" maxlength="2048">
-          <ul id="navbar">
+          <ul id="navbar1">
               <li><p>About</p></li>
               <li><p>Store</p></li>
+          </ul>
+          <ul id="navbar2">
               <li><p>Gmail</p></li>
               <li><p>Images</p></li>
               <li><img id="google-apps" src="https://icon-library.com/images/google-apps-icon-png/google-apps-icon-png-28.jpg"></li>
