--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
+<html>
 <head>
     <link href="style.css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Google</title>
 </head>
     <body>
+        <nav>
+            <ul id="left-nav">
+                <li><a href="#">About</a></li>
+                <li><a href="#">Store</a></li>
+            </ul>
+            <ul id="right-nav">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li><a href="#"><img id="google-apps" src="google-apps.png"></a></li>
+                <li><button id="sign-in">Sign In</button></li>
+            </ul>
+        </nav>
           <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
           <input id="search" type="text" name="search" maxlength="2048">
-          <ul id="navbar1">
-              <li><p>About</p></li>
-              <li><p>Store</p></li>
-          </ul>
-          <ul id="navbar2">
-              <li><p>Gmail</p></li>
-              <li><p>Images</p></li>
-              <li><img id="google-apps" src="https://icon-library.com/images/google-apps-icon-png/google-apps-icon-png-28.jpg"></li>
-              <li><button id="sign-in">Sign In</button></li>
-          </ul>
     </body>
+</html>
