fixed search bar and added buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             </ul>
         </nav>
           <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-          <input id="search" type="text" name="search" maxlength="2048">
+          <div id="search-bar-container">
+              <div id="search-bar-big">
+                <input id="search" type="text" name="search" maxlength="2048">
+                <div id="pic-container">
+                    <img id="mic" src="google-mic.png"></a>
+                    <a href="#"><img id="glass" src="magnifying-glass.png"></a>
+                </div>
+              </div>
+          </div>
     </body>
 </html>
