added search buttons

--- a/index.html
+++ b/index.html
@@ -28,5 +28,9 @@
                 </div>
               </div>
           </div>
+          <div id="buttons">
+            <button id="google-search">Google Search</button>
+            <button id="lucky">I'm Feeling Lucky</button>
+          </div>
     </body>
 </html>
