--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
                 <li><button id="sign-in">Sign In</button></li>
             </ul>
         </nav>
-          <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-          <div id="search-bar-container">
-              <div id="search-bar-big">
+        <img id="logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
+        <div id="search-bar-container">
+            <div id="search-bar-big">
                 <input id="search" type="text" name="search" maxlength="2048">
                 <div id="pic-container">
                     <img id="mic" src="google-mic.png"></a>
                     <a href="#"><img id="glass" src="magnifying-glass.png"></a>
                 </div>
-              </div>
-          </div>
-          <div id="buttons">
-            <button id="google-search">Google Search</button>
-            <button id="lucky">I'm Feeling Lucky</button>
-          </div>
+            </div>
+        </div>
+        <div id="buttons">
+            <a href="#"><button id="google-search">Google Search</button></a>
+            <a href="#"><button id="lucky">I'm Feeling Lucky</button></a>
+        </div>
+        <footer>
+            <ul id="foot-left">
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search Works</a></li>
+            </ul>
+            <ul id="foot-right">
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
