--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul id="foot-left">
                 <li><a href="#">Advertising</a></li>
                 <li><a href="#">Business</a></li>
-                <li><a href="#">How Search Works</a></li>
+                <li><a href="#">How Search works</a></li>
             </ul>
             <ul id="foot-right">
                 <li><a href="#">Privacy</a></li>
